# Cascade

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cascade-launch.sh  cascade.cpp  cascade.desktop  egfullscreenclient.cpp  egfullscreenclient.h  eglauncher.cpp  eglauncher.h  egmde.cpp  egwallpaper.cpp  egwallpaper.h  egwindowmanager.cpp  egwindowmanager.h  egworker.cpp  egworker.h  ffi_helpers.cpp  printer.cpp  printer.h  wlcs_fixture.cpp  wlr_input_inhibitor.cpp  wlr_input_inhibitor.h
mir_rs/: Cargo.toml  build.rs  mir.h  mir.hpp
mir_rs/src/: ffi.rs  lib.rs
old/: old_lib.rs
rust_wm/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  fixes.h  rust_wm.h.new
rust_wm/src/: actions.rs  animation.rs  entities.rs  ffi_helpers.rs  input_inhibitor.rs  ipc_server.rs  keyboard.rs  keymap.rs  lib.rs  pointer.rs
src/: actions.rs  animation.rs  background.rs  config.rs  entities.rs  input_inhibitor.rs  keyboard.rs  main.rs  pointer.rs  window_manager.rs
src/entities/: mru_list.rs  window.rs  workspace.rs
wayland-generated/: CMakeLists.txt  wlr-input-inhibitor-unstable-v1_wrapper.cpp  wlr-input-inhibitor-unstable-v1_wrapper.h
