[package]
name = "cascade"
version = "0.1.0"
authors = ["Rasmus Eneman <rasmus@eneman.eu>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.0"
wlral = { path = "../wlral/wlral"}
xkbcommon = "0.4.0"
